--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -98,12 +98,9 @@
                         </div>
 
                         <div class="dropDown">
-                            <div class="dropHeader">Homework</div>
-                            <div class= "dropContent">
-                                <Link to="/JScontent">JS content</Link> <br />
-                                </div>
+                            <Link to="/JScontent">JS Content</Link>
                             </div>
-
+                            
                         <div class="dropDown">
                             <div class="dropHeader">Search</div>
                             <div class="dropContent">
